2020-08-08

        * Bug fix version 1.7.1 released
        ================================

        Implement specific response cache for CTA stacked analysis (#3316)
        Speed up model definition XML file writing (#3308)
        Fix automatic type casting in Python interface (#3295)
        Make parameter file reading and writing thread safe (#3287)
        Add quotes to sky region names (#3280)
        Fix broken power law flux and eflux computation bug (#3279)


2020-07-02

        * Version 1.7.0 released
        ========================

        Add equality and non-equality operators to GSkyRegionCircle class
        Add GModelSpatialRadialRing class (#3253)
        Fix ambiguity problem in GSkyDir::posang() and posang_deg() (#3199)
        Fix GModelSpatialDiffuseCube pickeling issue (#3179)
        Rename GModelSpatialDiffuseCube::set_mc_cone() to mc_cone() (#3179)
        Rename GModelSpatialDiffuseMap::set_mc_cone() to mc_cone() (#3179)
        Properly set region for GModelSpatialDiffuseCube class (#3145)
        Avoid rounding errors in GSkyMap operators (#3126)
        Fix inverted min-max boundary in GOptimizePar for negative scale factors (#3072)
        Add GObservations::npred() methods (#3062)
        Exclude upper edge boundary in GSkyMap::contains() method (#3012)
        Add GSkyMap::extract() methods (#2990)
        Add GCOMDri::cone_content() method (#2973)
        Add GCOMObservation::drm(GModels&) method (#2973)
        Implement methods to remove models from a response cache (#2973)
        Improve COMPTEL classes (#2973)
        Install example binaries in share/examples folder (#2971)
        Add GModelSpatial::flux() method (#2961)
        Change order of Python module import (#2961)
        Add GGti::overlap() method
        Correctly write model attributes in GCOMModelDRBFitting class
        Fix GTime.utc() precision bug (#2917)
        Add GTime.datetime() method and add optional precision to GTime.utc() (#2909)