@@ -10,6 +10,8 @@ GammaLib 1.7.1 is a bug fix release for GammaLib release 1.7.
 
 The following bugs were fixed:
 
+* [`3321 <https://cta-redmine.irap.omp.eu/issues/3321>`_] -
+  Write units of response cubes into FITS files
 * [`3316 <https://cta-redmine.irap.omp.eu/issues/3316>`_] -
   Implement specific response cache for CTA stacked analysis
 * [`3308 <https://cta-redmine.irap.omp.eu/issues/3308>`_] -
