@@ -1,8 +1,9 @@
-2020-08-08
+2020-08-19
 
         * Bug fix version 1.7.1 released
         ================================
 
+        Write units of response cubes into FITS files (#3321)
         Implement specific response cache for CTA stacked analysis (#3316)
         Speed up model definition XML file writing (#3308)
         Fix automatic type casting in Python interface (#3295)
